--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 joblib==1.1.0
-numpy==1.22.3
-pandas==1.4.3
-requests==2.28.0
-scikit_learn==1.1.2
-streamlit==1.12.0
-tensorflow==2.6.0
+numpy
+pandas
+requests
+scikit_learn
+streamlit
+tensorflow
 tqdm==4.64.0
